# quant-methods

./: .gitignore  README.md  pyproject.toml
monte_carlo_simulations/: __init__.py
regression_methods/: __init__.py
trade_calculation_stochastic_rounding/: __init__.py
